src/app/app.component.css
/* ... */
/* Large Smartphone (Vertical) */
@media screen and (max-width: 600px) {
  /* Home --------------- */
  video { object-fit: cover; }
  #video-background { height: 100vh; width: 100vw; }
  #video-background-2 { height: 100vh; width: 100vw; }
  .main-title { top: 230px; left: 40px; font-size: 3rem; text-align: center; opacity: 1; }
  .mobile-main-title { display: initial; }
  .social-icons { top: 85%; }
  .social-icons fa-icon { font-size: 2.3rem; padding: 5px 10px; }
  /* About -------------- */
  .card { width: 100vw; background-color: rgba(255,255,255,.7); top: 0; min-height: 100vh; }
  .card-text { font-size: 1.1rem; }
  .card-button { width: 40%; left: 30%; font-weight: bold; padding: .5rem; font-family: sans-serif; }
  /* Projects ----------- */
  .projects-title { font-size: 2rem; margin-top: -5px; }
  .project-img img { height: 388px; width: 388px; }
  .github-link { margin-top: 2vh; }
  /* Contact/Footer */
  .contact-mail { font-size: 2.3rem; }
  .footer-icons fa-icon { margin-left: 20px; }
}

/* Large Smartphone (Horizontal) */
@media screen and (max-width: 850px) and (max-height: 500px) {
  /* Home ----------------- */
  .main-title { font-size: 2rem; top: 130px; left: 185px; }
  .mobile-main-title { display: none; }
  .custom-spacing { margin-left: 30px; }
  .social-icons { top: 80%; }
  .social-icons fa-icon { font-size: 2.8rem; padding: 5px 10px; }
  /* About ---------------- */
  .card { width: 80%; top: 0; }
  .card-text { font-size: 1.1rem; }
  .about-img { height: 50vh; width: 50vh; }
  /* Projects ------------- */
  .projects { margin: 0 2%; }
  .projects-title { font-size: 2rem; }
  .project-img img { height: 245px; width: 245px; }
  .project-title { font-size: 1.1rem; margin-top: 1vh; }
  .github-link { font-size: 1rem; margin-top: 3vh; }
  /* Contact/Footer */
  .contact-mail { font-size: 3rem; margin-top: 5vh; }
  .footer-icons fa-icon { margin-left: 20px; }
}

/* iPhone X - Horizontal*/
@media screen and (max-width: 724px) and (max-height: 376px) {
  .project-title { font-size: 1.2rem; }
  .github-link { font-size: 1rem; }
}

/* iPhone X */
@media screen and (max-width: 376px) {
  .main-title { left: 22px; }
  .card { height: fit-content; }
  .card-text { font-size: 1.05rem; }
  .card-button { font-size: 1.1rem; }
  .projects-title { font-size: 1.8rem; }
}

/* iPhone 6/7/8 */
@media screen and (max-width: 376px) and (max-height: 668px) {
  .main-title { top: 185px; }
}

/* iPhone 6/7/8 - Browser UI */
@media screen and (max-width: 376px) and (max-height: 600px) {
  .main-title { top: 135px; }
}

/* iPhone 6/7/8 - Horizontal */
@media screen and (max-width: 668px) and (max-height: 376px) {
  .main-title { left: 108px; }
  .projects-title { margin-top: -20px; }
  .project-img img { height: 210px; width: 210px; }
  .project-title { font-size: 1rem; }
  .github-link { font-size: 1rem; }
}

/* iPhone 5 */
@media screen and (max-width: 330px) {
  .main-title { font-size: 2.5rem; top: 150px; }
  .social-icons fa-icon { font-size: 2rem; }
  .card-button { width: 46%; left: 28%; }
  .contact-mail { font-size: 2rem; }
}

